--- a/CurtainAccessory.html
+++ b/CurtainAccessory.html
@@ -233,6 +233,157 @@
             </h3>
           </div>
         </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Arabian 1.webp" alt="Imp Arabian 1"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Arabian 1
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Hook 6.webp" alt="Imp Hook 6" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Hook 6
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Arabian 2.webp" alt="Imp Arabian 2"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Arabian 2
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Imp Curtain Acrylic Stick 12 mm.webp"
+            alt="Imp Curtain Acrylic Stick 12 mm" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Curtain Acrylic Stick 12 mm
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Arabian 3.webp" alt="Imp Arabian 3"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Arabian 3
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Imp Curtain Acrylic Stick 15 mm.webp"
+            alt="Imp Curtain Acrylic Stick 15 mm" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Curtain Acrylic Stick 15 mm
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Bakram.webp" alt="Imp Bakram" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Bakram
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Imp Flexible Curtain Track.webp" alt="Imp Flexible Curtain Track"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Flexible Curtain Track
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Eyelate.webp" alt="Imp Eyelate"
+            class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Eyelate
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Ring 1.webp" alt="Imp Ring 1" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Ring 1
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Hook 1.webp" alt="Imp Hook 1" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Hook 1
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Ring 2.webp" alt="Imp Ring 2" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Ring 2
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Hook 2.webp" alt="Imp Hook 2" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Hook 2
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Ring 3.webp" alt="Imp Ring 3" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Ring 3
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Hook 3.webp" alt="Imp Hook 3" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Hook 3
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Ring 4.webp" alt="Imp Ring 4" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Ring 4
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Hook 4.webp" alt="Imp Hook 4" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Hook 4
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Curtain Accessory/Ring 5.webp" alt="Imp Ring 5" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Ring 5
+            </h3>
+          </div>
+        </div>
       </div>
     </section>
 
