--- a/Pipes.html
+++ b/Pipes.html
@@ -245,6 +245,54 @@
             </h3>
           </div>
         </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Rod 1.webp" alt="Imp Wooden Rod 1" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Wooden Rod 1
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Rod 2.webp" alt="Imp Wooden Rod 2" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Wooden Rod 2
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Rod 3.webp" alt="Imp Wooden Rod 3" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Wooden Rod 3
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Rod 4.webp" alt="Imp Wooden Rod 4" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Wooden Rod 4
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Rod 5.webp" alt="Imp Wooden Rod 5" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Wooden Rod 5
+            </h3>
+          </div>
+        </div>
+        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+          <img src="./images/Pipes/Rod 6.webp" alt="Imp Wooden Rod 6" class="w-full h-48 object-contain mb-4" />
+          <div>
+            <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
+              Imp Wooden Rod 6
+            </h3>
+          </div>
+        </div>
       </div>
     </section>
     <section id="catalogue" class="text-white py-10">
