home page updated

--- a/index.html
+++ b/index.html
@@ -133,15 +133,13 @@
         <div class="splide__track">
           <ul class="splide__list">
             <li class="splide__slide h-[600px] bg-cover bg-center"
-              style="background-image: url('./images/home Page/home.jpeg');"></li>
+              style="background-image: url('./images/home Page/home1.jpg');"></li>
             <li class="splide__slide h-[600px] bg-cover bg-center"
-              style="background-image: url('./images/about.jpeg');"></li>
+              style="background-image: url('./images/home Page/home2.jpg');"></li>
             <li class="splide__slide h-[600px] bg-cover bg-center"
-              style="background-image: url('./images/about1.jpeg');"></li>
+              style="background-image: url('./images/home Page/home3.jpg');"></li>
             <li class="splide__slide h-[600px] bg-cover bg-center"
-              style="background-image: url('./images/about2.jpeg');"></li>
-            <li class="splide__slide h-[600px] bg-cover bg-center"
-              style="background-image: url('./images/about3.jpeg');"></li>
+              style="background-image: url('./images/home Page/home4.jpg');"></li>
           </ul>
         </div>
       </div>
