Removed AI Images

--- a/index.html
+++ b/index.html
@@ -1507,116 +1507,116 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials1.webp" alt="Finials 1" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="IMP Aluminium Alpina" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 1</h3>
+                    <h3 class="font-medium">IMP Aluminium Alpina</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials2.webp" alt="Finials 2" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Corum.webp" alt="IMP Aluminium Corum" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 2</h3>
+                    <h3 class="font-medium">IMP Aluminium Corum</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials3.webp" alt="Finials 3" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Edox.webp" alt="IMP Aluminium Edox" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 3</h3>
+                    <h3 class="font-medium">IMP Aluminium Edox</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials4.webp" alt="Finials 4" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Invicta.webp" alt="IMP Aluminium Invicta" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 4</h3>
+                    <h3 class="font-medium">IMP Aluminium Invicta</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials5.webp" alt="Finials 5" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Luminox.webp" alt="IMP Aluminium Luminox" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 5</h3>
+                    <h3 class="font-medium">IMP Aluminium Luminox</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials6.webp" alt="Finials 6" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Stowa.webp" alt="IMP Aluminium Stowa" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 6</h3>
+                    <h3 class="font-medium">IMP Aluminium Stowa</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials7.webp" alt="Finials 7" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Traser.webp" alt="IMP Aluminium Traser" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 7</h3>
+                    <h3 class="font-medium">IMP Aluminium Traser</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Finials/Finials8.webp" alt="Finials 8" class="w-full h-60 object-contain" />
+                    <img src="./images/Finials/IMP Aluminium Zelos.webp" alt="IMP Aluminium Zelos" class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
                       Quick View
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Finials 8</h3>
+                    <h3 class="font-medium">IMP Aluminium Zelos</h3>
                   </div>
                 </div>
               </li>
-              <li class="splide__slide py-2">
+              <!---<li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
                     <img src="./images/Finials/Finials9.webp" alt="Finials 9" class="w-full h-60 object-contain" />
@@ -1755,7 +1755,7 @@
                     <h3 class="font-medium">Imp Finials 18</h3>
                   </div>
                 </div>
-              </li>
+              </li>--->
             </ul>
           </div>
         </div>
