--- a/Finials.html
+++ b/Finials.html
@@ -98,7 +98,7 @@
     <!-- Products Section -->
     <section class="mb-16">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <!---<div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="./images/Finials/Finials1.webp" alt="Finials 1" class="w-full h-48 object-contain mb-4" />
           <div>
             <h3 class="text-sm md:text-base font-medium text-gray-800 mb-2 min-h-[40px]">
@@ -241,7 +241,7 @@
               Imp Finials 18
             </h3>
           </div>
-        </div>
+        </div> --->
         <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="Imp Aluminium Alpina"
             class="w-full h-48 object-contain mb-4" />
