--- a/CurtainAccessory.html
+++ b/CurtainAccessory.html
@@ -98,7 +98,7 @@
     <!-- Products Section -->
     <section class="mb-16">
       <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 md:gap-6">
-        <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
+        <!--- <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="./images/Curtain Accessory/American Curtain Patti.webp" alt="American Curtain Patti"
             class="w-full h-48 object-contain mb-4" />
           <div>
@@ -232,7 +232,7 @@
               Imp Track Runner
             </h3>
           </div>
-        </div>
+        </div> --->
         <div class="border border-gray-200 rounded-lg p-4 transition duration-300 hover:shadow-lg hover:-translate-y-1">
           <img src="./images/Curtain Accessory/Arabian 1.webp" alt="Imp Arabian 1"
             class="w-full h-48 object-contain mb-4" />
