--- a/index.html
+++ b/index.html
@@ -1776,7 +1776,7 @@
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/American Curtain Patti.webp" alt="American Curtain Patti"
+                    <img src="./images/Curtain Accessory/Arabian 1.webp" alt="Arabian 1"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1784,14 +1784,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp American Curtain Patti</h3>
+                    <h3 class="font-medium">Imp Arabian 1</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Bakram Patta.webp" alt="Bakram Patta"
+                    <img src="./images/Curtain Accessory/Arabian 2.webp" alt="Imp Arabian 2"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1799,14 +1799,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Bakram Patta</h3>
+                    <h3 class="font-medium">Imp Arabian 2</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Curtain Hook Brass.webp" alt="Curtain Hook Brass"
+                    <img src="./images/Curtain Accessory/Arabian 3.webp" alt="Imp Arabian 3"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1814,14 +1814,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Curtain Hook Brass</h3>
+                    <h3 class="font-medium">Imp Arabian 3</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Ripple Fold.webp" alt="Ripple Fold"
+                    <img src="./images/Curtain Accessory/Hook 1.webp" alt="Imp Hook 1"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1829,14 +1829,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Ripple Fold</h3>
+                    <h3 class="font-medium">Imp Hook 1</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/track cap.webp" alt="track cap"
+                    <img src="./images/Curtain Accessory/Hook 2.webp" alt="Imp Hook 2"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1844,14 +1844,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp track cap</h3>
+                    <h3 class="font-medium">Imp Hook 2</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Track Hook.webp" alt="Track Hook"
+                    <img src="./images/Curtain Accessory/Hook 3.webp" alt="Imp Hook3"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1859,14 +1859,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Track Hook</h3>
+                    <h3 class="font-medium">Imp Hook 3</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Track Lock.webp" alt="Track Lock"
+                    <img src="./images/Curtain Accessory/Hook 4.webp" alt="Imp Hook 4"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1874,14 +1874,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Track Lock</h3>
+                    <h3 class="font-medium">Imp Hook 4</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/track Wall Bracket.webp" alt="track Wall Bracket"
+                    <img src="./images/Curtain Accessory/Hook 6.webp" alt="Imp Hook 6"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1889,14 +1889,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp track Wall Bracket</h3>
+                    <h3 class="font-medium">Imp Hook 6</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Arebian Tape.webp" alt="Arebian Tape"
+                    <img src="./images/Curtain Accessory/Ring 1.webp" alt="Imp Ring 1"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1904,14 +1904,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Arebian Tape</h3>
+                    <h3 class="font-medium">Imp Ring 1</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Celling Bracket Track.webp" alt="Celling Bracket Track"
+                    <img src="./images/Curtain Accessory/Ring 2.webp" alt="Imp Ring 2"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1919,14 +1919,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Celling Bracket Track</h3>
+                    <h3 class="font-medium">Imp Ring 2</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Eyelet Ring.webp" alt="Eyelet Ring"
+                    <img src="./images/Curtain Accessory/Ring 3.webp" alt="Imp Ring 3"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1934,14 +1934,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Eyelet Ring</h3>
+                    <h3 class="font-medium">Imp Ring 3</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/track Bracket.webp" alt="track Bracket"
+                    <img src="./images/Curtain Accessory/Ring 4.webp" alt="Imp Ring 4"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1949,14 +1949,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp track Bracket</h3>
+                    <h3 class="font-medium">Imp Ring 4</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Track Elbow.webp" alt="Track Elbow"
+                    <img src="./images/Curtain Accessory/Ring 5.webp" alt="Imp Ring 5"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1964,14 +1964,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Track Elbow</h3>
+                    <h3 class="font-medium">Imp Ring 5</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Track Jointer.webp" alt="Track Jointer"
+                    <img src="./images/Curtain Accessory/Eyelate.webp" alt="Imp Eyelate"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1979,14 +1979,14 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Track Jointer</h3>
+                    <h3 class="font-medium">Imp Eyelate</h3>
                   </div>
                 </div>
               </li>
               <li class="splide__slide py-2">
                 <div class="product-card bg-white rounded-lg shadow-lg overflow-hidden mx-2">
                   <div class="relative">
-                    <img src="./images/Curtain Accessory/Track Runner.webp" alt="Track Runner"
+                    <img src="./images/Curtain Accessory/Bakram.webp" alt="Imp Bakram"
                       class="w-full h-60 object-contain" />
                     <button
                       class="quick-view absolute inset-0 bg-black/50 flex items-center justify-center text-white opacity-0 transition-opacity duration-300">
@@ -1994,7 +1994,7 @@
                     </button>
                   </div>
                   <div class="p-4">
-                    <h3 class="font-medium">Imp Track Runner</h3>
+                    <h3 class="font-medium">Imp Bakram</h3>
                   </div>
                 </div>
               </li>
