--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </div>
           </div>
           <div class="category-card relative rounded-lg overflow-hidden shadow-lg group">
-            <img src="./images/Curtain Accessory/Track Elbow.webp" alt="Celling Bracket Track"
+            <img src="./images/Curtain Accessory/Ring 1.webp" alt="Celling Bracket Track"
               class="w-full h-64 object-contain" />
             <div
               class="category-overlay absolute inset-0 bg-primary/60 flex items-center justify-center opacity-0 transition-opacity duration-300">
@@ -246,7 +246,7 @@
             </div>
           </div>
           <div class="category-card relative rounded-lg overflow-hidden shadow-lg group">
-            <img src="https://public.readdy.ai/ai/img_res/fe7f4207ce5d5adc743d652d6ed927aa.jpg" alt="Finials"
+            <img src="./images/Finials/IMP Aluminium Alpina.webp" alt="Finials"
               class="w-full h-64 object-cover" />
             <div
               class="category-overlay absolute inset-0 bg-primary/60 flex items-center justify-center opacity-0 transition-opacity duration-300">
